--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
   margin: 0;
 }
 .navtop {
-  background-color: #3f69a8;
+  background-color: #1a529e;
   height: 60px;
   width: 100%;
   border: 0;
@@ -56,8 +56,13 @@ body {
   color: #ffffff;
 }
 .content {
-  width: 1000px;
+  width: 100%;
+  height: 100vh;
   margin: 0 auto;
+  background-color: #1a529e;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .content h2 {
   margin: 0;
